<resources>
    <string name="app_name">Shopping List</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="username_dots">Username:</string>
    <string name="email_dots">Email:</string>
    <string name="password_dots">Password:</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">WELCOME</string>
    <string name="new_list">CREATE NEW LIST</string>
    <string name="see_my_lists">SEE MY LISTS</string>
    <string name="list_title">Naslov liste</string>
    <string name="ok">OK</string>
    <string name="title">NASLOV</string>
    <string name="share_list">Share list:</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="email_format_is_wrong">Email format is wrong!</string>
    <string name="one_or_more_fields_is_empty">One or more fields is empty!</string>
    <string name="wrong_username_or_password">Wrong username or password</string>
    <string name="save">SAVE</string>
    <string name="naslov">Naslov:</string>
    <string name="naslov_temp">NASLOV TEMP</string>
    <string name="status">STATUS</string>
    <string name="shared">Shared:</string>
    <string name="list_title_blank">LIST TITLE BLANK</string>
    <string name="add">ADD</string>
    <string name="filter">FILTER</string>
    <string name="see_shared_lists">SEE SHARED LISTS</string>
    <string name="see_all_lists">SEE ALL LISTS</string>
    <string name="refresh">REFRESH</string>
</resources>