<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".LoginFragment">

    <EditText
        android:id="@+id/form_login_username"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:hint="@string/username" />

    <EditText
        android:id="@+id/form_login_password"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/text_login_wrong_username_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wrong_username_or_password"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:visibility="gone" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:text="@string/login" />

</LinearLayout>
