<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/naslov"
            android:textColor="@color/pink"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/text_welcome_list_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/naslov_temp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shared"
            android:textColor="@color/pink"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/text_welcome_shared_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status" />

    </LinearLayout>

</LinearLayout>