<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".RegisterFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/username_dots" />

        <EditText
            android:id="@+id/form_register_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/email_dots" />

        <EditText
            android:id="@+id/form_register_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/password_dots" />

        <EditText
            android:id="@+id/form_register_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="textPassword" />

    </LinearLayout>

    <TextView
        android:id="@+id/text_register_warning_empty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/one_or_more_fields_is_empty"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:visibility="gone" />

    <TextView
        android:id="@+id/text_register_warning_email_format"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email_format_is_wrong"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:visibility="gone" />

    <Button
        android:id="@+id/button_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/register" />

</LinearLayout>
