<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ShowListActivity">

    <include layout="@layout/toolbar_layout" />

    <TextView
        android:id="@+id/text_show_list_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/list_title_blank"
        android:textColor="@color/pink"
        android:textSize="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/form_show_list_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:hint="@string/naslov" />

        <Button
            android:id="@+id/button_show_list_add"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/add" />

        <Button
            android:id="@+id/button_show_list_refresh"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="@string/refresh"
            android:visibility="gone"/>

    </LinearLayout>

    <ListView
        android:id="@+id/list_show_list_tasks"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>